[package]
name = "sandwich-lab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.0", features = ["full"] }
dotenv = "0.15.0"
ethers = "0.6.2"
colored = "2.0.0"
digit_group = "0.1.0"